making sure code is updated